charts/mealie/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mealie
  namespace: mealie
spec:
  selector:
    matchLabels:
      app: mealie
  template:
    metadata:
      labels:
        app: mealie
    spec:
      containers:
        - name: mealie
          image: ghcr.io/mealie-recipes/mealie
          ports:
            - containerPort: 9000
              name: http
          resources:
            limits:
              memory: 1000Mi
            requests:
              memory: 500Mi
              cpu: 100m
          volumeMounts:
            - name: mealie-data
              mountPath: /app/data/
      volumes:
        - name: mealie-data
          persistentVolumeClaim:
            claimName: mealie-data
