charts/mealie/mealie-k8s.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mealie
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mealie
  namespace: mealie
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mealie
  template:
    metadata:
      labels:
        app: mealie
    spec:
      containers:
        - name: mealie
          image: ghcr.io/mealie-recipes/mealie:v3.9.2
          ports:
            - containerPort: 9000
              name: http
          resources:
            limits:
              memory: 1000Mi
            requests:
              memory: 500Mi
              cpu: 100m
          volumeMounts:
            - name: mealie-data
              mountPath: /app/data/
      volumes:
        - name: mealie-data
          persistentVolumeClaim:
            claimName: mealie-data
---
apiVersion: v1
kind: Service
metadata:
  name: mealie
  namespace: mealie
spec:
  selector:
    app: mealie
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 9000
      name: http
  type: ClusterIP
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mealie
  namespace: mealie
spec:
  hostnames:
    - mealie.int.imdevinc.com
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway
      namespace: traefik
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: mealie
          port: 9000
